test/param/bharshbarg/setMultiple.good
setMultiple.chpl:2: error: cannot assign to const variable
setMultiple.chpl:2: error: parameter set multiple times
