test/param/bharshbarg/setMultiple.chpl
param foobar = true;
foobar = false;
writeln(foobar);
